--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,333 @@
-h1 {
-    color: blue;
+.header {
+    height: 293px;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items:center;
+    padding: 92px 50px 96px 50px;
 }
-    /* место для вашего кода */
+
+.header__menu {
+    position: relative;
+    top: -4px;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 33px;
+    font-size: 18px;
+    list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+    list-style-type: none;
+}
+
+.header__links-list-item_bullit {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
+
+.address_tel {
+  text-decoration: underline;
+}
+
+.header__logo-image {
+    background-size: cover;
+    width: 148px;
+    height: 105px;
+}
+
+.header__address {
+    font-family: Raleway;
+    max-width: 240px;
+    justify-self: end; 
+}
+
+.address {
+    font-size: 18px;
+    text-underline-offset: 3px;
+    line-height: 1.4;
+    font-style: normal;
+}
+
+
+.cover {
+    position: relative;
+    background-image: url("/images/cover.jpg");
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+    z-index: -2;
+}
+
+.overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+    left: 0;
+    top: 0;
+}
+
+.cover__description {
+    display: flex;
+}
+
+
+.cover__title {
+    text-transform: uppercase;
+    font-family: Raleway;
+    font-weight: bold;
+    font-display: swap;
+    font-size: 100px;
+    padding-top: 165px;
+    padding-left: 50px;
+    padding-right: 21px;
+    letter-spacing: 30px;
+    text-underline-offset: 50px;
+    color: rgba(255, 255, 255, 1);
+    z-index: 1;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+    display: block;
+    text-align: center;
+    margin-top: 17px;
+
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: right;
+  margin-top: 17px;
+}
+
+.cover__description {
+    display: flex;
+    
+}
+
+
+.cover__description-text {
+    word-spacing: 18px;
+    font-size: 22px;
+    color: rgba(255, 255, 255, 1);
+    text-transform: uppercase;
+    padding: 118px 50px 60px 50px;
+}
+
+.bet-button {
+    margin-top: 104px;
+    margin-left: 60px;
+    font-size: 22px;
+    color: rgba(255, 255, 255, 1);
+    text-transform: uppercase;
+    background-color: transparent;
+    width: 256px;
+    height: 51px;
+    border-color: rgba(255, 255, 255, 1);
+}
+
+.lots {
+  margin-top: 183px;
+}
+
+.lots__heading {
+    font-weight: 700;
+    font-size: 40px;
+    text-transform: uppercase;
+    margin-left: 63px;
+}
+
+.lots__card-list {
+    margin-top: 25px;
+    list-style-type: none;
+    display: flex;  
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 25px;
+    color: rgba(255, 255, 255, 1);
+    padding-left: 24px;
+    
+}  
+
+.lots__card-list-item {
+    min-height: 596px;
+    width: 334px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 48px 40px;
+    line-height: 120%;  
+    height: 100%; 
+}
+
+.card-link {
+    height: 100%;
+}
+
+.card_type_film {
+    position: relative;
+    background-image: url("/images/card-lot-01.jpg");
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+    z-index: -2;    
+}
+
+.card_type_book {
+    position: relative;
+    background-image: url("/images/card-lot-02.jpg");
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+    z-index: -2;  
+}
+
+.card_type_picture {
+    position: relative;
+    background-image: url("/images/card-lot-03.jpg");
+    background-size: cover;
+    height: 100%;
+    background-position: center;
+    z-index: -2;   
+}
+
+.card__title {
+    font-weight: 700;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    line-height: 120%;
+    text-underline-offset: 3px;   
+}
+
+.card__text {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+}
+
+.card_link_buttom {
+    margin: 30px 65px;  
+}
+
+.lots__look-more-link {
+    font-size: 20px;
+    text-transform: lowercase;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
+
+.about {
+    display: grid;
+  grid-template-columns: 334px 1fr;
+  margin: 128px 24px 0px 24px;
+}
+
+.about-logo {
+    margin-top: 27px;
+}
+
+.background-logo {
+    background-color: black;
+    border-radius: 120px;
+    width: 240px;
+    height: 240px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 48px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+    margin-top: 128px;
+    margin-left: 26px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+  margin-top: 100px;
+  margin-right: 4px;
+}
+
+.about__text_p {
+    margin-bottom: 22px;
+}
+
+.footer {
+    margin-top: 181px;
+    height: 180px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer__address {
+  padding-left: 50px;
+}
+
+.footer__menu {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.footer__menu-list {
+    
+    list-style-type: none;
+    text-align: center;
+
+}
+
+.footer__menu-list-item {
+
+}
+
+.footer__menu-link_active {
+    text-decoration:none;
+}
+
+.footer__menu-link {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+
+}
+
+.footer__social-list {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 50px 0px 76px;
+}
+
+.footer__social-list-item {
+
+}
+
+.footer__social-link {
+
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
