--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,10 @@
     text-underline-offset: 4px;
 }
 
+.link_no-bullit {
+    text-decoration: none;
+}
+
 .address_tel {
     text-decoration: underline;
 }
@@ -55,7 +59,7 @@
 .cover {
     position: relative;
     height: 100%;
-    background-image: url("/images/cover.jpg");
+    background-image: url("../images/cover.jpg");
     background-position: center;
     background-size: cover;
     z-index: 0;
@@ -111,16 +115,16 @@
     min-height: 51px;
     margin-top: 95px;
     margin-left: 60px;
-    margin-bottom: 50px;
-    border-color: rgba(255, 255, 255, 1);
+    margin-bottom: 49px;
     color: rgba(255, 255, 255, 1);
     font-size: 22px;
     text-transform: uppercase;
     background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 1);
 }
 
 .lots {
-    margin-top: 183px;
+    margin-top: 181px;
 }
 
 .lots__heading {
@@ -155,6 +159,7 @@
     line-height: 120%;
     background-position: center;
     background-size: cover;
+    position: relative;
     z-index: 0;
 }
 
@@ -164,21 +169,15 @@
 }
 
 .card_type_film {
-    position: relative;
-    height: 100%;
-    background-image: url("/images/card-lot-01.jpg");
+    background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
-    position: relative;
-    height: 100%;
-    background-image: url("/images/card-lot-02.jpg");
+    background-image: url("../images/card-lot-02.jpg");
 }
 
 .card_type_picture {
-    position: relative;
-    height: 100%;
-    background-image: url("/images/card-lot-03.jpg");
+    background-image: url("../images/card-lot-03.jpg");
 }
 
 .card__title {
@@ -188,6 +187,7 @@
     text-decoration: underline;
     text-underline-offset: 3px;
     text-transform: uppercase;
+    text-decoration-thickness: 1px;
 }
 
 .card__text {
@@ -213,7 +213,7 @@
 .about {
     display: grid;
     grid-template-columns: 334px 1fr;
-    margin: 127px 24px 0px 24px;
+    margin: 126px 24px 0px 24px;
 } 
 
 .about-logo {
@@ -259,7 +259,8 @@
 .footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 181px;
+    margin-top: 183px;
+    margin-bottom: 80px;
 }
 
 .footer__address {
